Fix to Doors and Spot
- Success text on doors now appears evenly spaced on Windows and Mac
- height of Doors set to 98% to avoid creating a scrollbar at small window sizes
- <use> no longer used for SVG in Spot, so touchmove and touchend events are now correctly triggered

--- a/puzzles/doors/puzzle.css
+++ b/puzzles/doors/puzzle.css
@@ -8,7 +8,7 @@ margin: 0;
 top: 0;}
 svg {
   width: 100%;
-  height: 99.5%;
+  height: 98%;
 }
 use#rrr {
   fill:#e88;
